@@ -1,5 +1,8 @@
 2015-05-30  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
 
+	* contrib/addtiffo/tif_overview.c (TIFF_DownSample): Check buffer
+	size calculation for overflow.
+
 	* contrib/addtiffo/addtiffo.c (main): Possibly address Coverity
 	1024226 "Untrusted value as argument".
 
